--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,7 @@ fastapi==0.108.0
 pydantic==2.5.3
 uvicorn==0.25.0
 requests==2.31.0
+pandas==2.1.4
+matplotlib==3.8.0
+fpdf==1.7.2
+starlette==0.36.3
